crates/llvmkit-ir/tests/compile_fail/sealed_block_cannot_start_cursor.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/sealed_block_cannot_start_cursor.rs:17:45
   |
17 |         let _cursor = BlockCursor::at_start(sealed);
   |                       --------------------- ^^^^^^ expected `BasicBlock<'_, _, Unsealed, _>`, found `BasicBlock<'_, (), Sealed>`
   |                       |
   |                       arguments to this function are incorrect
   |
   = note: expected struct `llvmkit_ir::BasicBlock<'_, _, Unsealed, _>`
              found struct `llvmkit_ir::BasicBlock<'_, (), Sealed, Brand<'_>>`
note: associated function defined here
  --> src/iter.rs
   |
   |     pub fn at_start(block: BasicBlock<'ctx, R, Unsealed, B>) -> Self {
   |            ^^^^^^^^
